Fix GitHub Actions workflows for cross-platform builds
- Simplified target installation in release workflow
- CI workflow builds natively for each platform (no cross-compilation)
- Release workflow properly adds targets before building
- Fixed duplicate target installation steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,8 +72,9 @@ jobs:
     
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: ${{ matrix.target }}
+    
+    - name: Add build target
+      run: rustup target add ${{ matrix.target }}
     
     - name: Build Compiler
       run: |
