Fix cross-compilation issue: Remove forced Windows target
Root cause: tools/.cargo/config.toml was forcing x86_64-pc-windows-msvc target
for ALL builds, including Linux and macOS, causing 'can't find crate for core' errors.

Solution:
- Removed forced 'target = x86_64-pc-windows-msvc' from [build] section
- Added platform-specific target sections (comments only, no forced targets)
- Let Cargo automatically select the appropriate target for each platform
- Removed complex cleanup script from CI since root cause is now fixed

This allows:
- Windows builds to use x86_64-pc-windows-msvc (native)
- Linux builds to use x86_64-unknown-linux-gnu (native)
- macOS builds to use x86_64-apple-darwin (native)

No more cross-compilation attempts!

--- a/tools/.cargo/config.toml
+++ b/tools/.cargo/config.toml
@@ -1,4 +1,12 @@
-# Use MSVC toolchain on Windows (requires Visual Studio Build Tools)
-[build]
-target = "x86_64-pc-windows-msvc"
+# Platform-specific build configurations
+# The target is automatically selected based on the host platform
 
+[target.x86_64-pc-windows-msvc]
+# Use MSVC toolchain on Windows (requires Visual Studio Build Tools)
+# This only applies when building on Windows
+
+[target.x86_64-unknown-linux-gnu]
+# Linux builds use the default GNU toolchain
+
+[target.x86_64-apple-darwin]
+# macOS builds use the default Apple toolchain
