fix: Add explicit GitHub token permissions and usage for release workflow
- Added 'contents: write' and 'packages: write' permissions to release workflow
- Explicitly specified github-token parameter in all github-script actions
- Added proper permissions to test-release workflow for consistency
- This should resolve the 'Resource not accessible by integration' error

--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: '0.1.0-test'
 
+permissions:
+  contents: read
+  actions: write
+
 env:
   CARGO_TERM_COLOR: always
 
