--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,33 +78,39 @@ jobs:
       run: |
         cd tools
         cargo test --verbose
-
+        
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        components: rustfmt, clippy
-    
-    - name: Check formatting
-      run: |
-        cd compiler
-        cargo fmt -- --check
-        cd ../runtime
-        cargo fmt -- --check
-        cd ../tools
-        cargo fmt -- --check
-    
-    - name: Run clippy
-      run: |
-        cd compiler
-        cargo clippy -- -D warnings
-        cd ../runtime
-        cargo clippy --all-targets -- -D warnings -A dead-code
-        cd ../tools
-        cargo clippy -- -D warnings
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+      - name: Check formatting
+        id: fmtcheck
+        run: |
+          cd compiler
+          cargo fmt -- --check
+          cd ../runtime
+          cargo fmt -- --check
+          cd ../tools
+          cargo fmt -- --check
+      - name: Auto-fix formatting and push
+        if: failure() # Only runs if previous step failed
+        run: |
+          cargo fmt
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "chore: auto-format code via CI" || exit 0
+          git push
+      - name: Run clippy
+        run: |
+          cd compiler
+          cargo clippy -- -D warnings
+          cd ../runtime
+          cargo clippy --all-targets -- -D warnings -A dead-code
+          cd ../tools
+          cargo clippy -- -D warnings
