--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Auto-fix formatting and push
         if: failure() # Only runs if previous step failed
         run: |
-          cargo fmt
+          cargo fmt --all
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
