Enable auto-fix formatting on failure
Add condition to auto-fix formatting step on failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
           cd ../tools
           cargo fmt -- --check
       - name: Auto-fix formatting and push
+        if: failure() 
         run: |
           cd $GITHUB_WORKSPACE
           cargo fmt --all
