--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore: auto-format code via CI" || exit 0
-          git push
+          git push origin HEAD:${GITHUB_REF_NAME}
       
       - name: Run clippy
         run: |
